--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   min-height: 100vh;
   background: black;
   color: #ffd6e8;
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Dancing Script';
 }
 
 /* center-only pages */
@@ -28,7 +28,7 @@ body {
 
 /* ===== Titles ===== */
 h1 {
-  font-family: 'Pacifico', cursive;
+  font-family: 'Pacifico';
   font-size: 3rem;
   color: #ff8fb3;
   margin-bottom: 20px;
@@ -36,7 +36,7 @@ h1 {
 
 /* ===== Content ===== */
 p, .caption, .card p {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Dancing Script';
   font-size: 1.3rem;
   line-height: 1.7;
   margin: 8px 0;
